chore: clean up deprecated APIs, and own theme APIs
prep work for spring v7 and boot v4